--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1642,19 +1642,16 @@ ul.inner-menu-mobile {
 .top-bag-item {
   text-align: center;
   line-height: 50px;
-  position: relative;
-  padding-right:5px;
+  padding-top:5px;
   .top-bag-icon-style {
     font-size: 21px;
-    position: absolute;
-    bottom: 12px;
-    left: 10px;
     color: #444444;
+    margin: inherit;
   }
   .top-badge{
     position: absolute;
     top: 3px;
-    right: 2px;
+    right: 0;
     left: 0;
     min-width: 10px;
     padding-top: 2px;
