--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -149,9 +149,9 @@ ol {
 @media screen and (max-width: 992px) {
 .terms {
     padding: 0 0 80px 0;
-    p a {
-      word-break: break-all;
-    }
+    // p a {
+    //   word-break: break-all;
+    // }
 }
 }
 
