--- a/src/components/ThirdPartyEnquiryPopup/styles.scss
+++ b/src/components/ThirdPartyEnquiryPopup/styles.scss
@@ -219,3 +219,11 @@
     text-align: start;
   }
 }
+.select-size {
+    font-size: 12px;
+    color: black;
+    text-align: left;
+    font-style: italic;
+    // font-weight: bold;
+    font-weight: 600;
+}
