--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -40,7 +40,7 @@
     right: 0;
     bottom: 0;
     z-index: 20;
-    width: 360px;
+    width: auto;
     font-size: 16px;
     line-height: 16px;
     display: none;
