--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -759,9 +759,10 @@ p.corporate-sub-heading {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: top 0.3s;
+  transition: top 0.5s;
   &.hide {
     top: 0px;
+    transition: top 1.5s;
   }
 }
 
@@ -814,9 +815,9 @@ p.corporate-sub-heading {
 
 .list-grid-bar {
   span{
-    font-size: 9px;
+    font-size: 12px;
     vertical-align: middle;
-    color: #191919
+    color: #9f9f9f
   }
   .grid-span {
     padding-right: 8px;
@@ -825,18 +826,18 @@ p.corporate-sub-heading {
     padding-left: 8px;
   }
   .active{
-    color: #9F9F9F
+    color: #4C4C4C;
   }
 }
 
 .grid-container {
   height: 22px;
-  border-right: 1px solid #707070;
+  border-right: 1px solid #9F9F9F;
 }
 
 .grid-icon {
-  height: 18px;
-  padding-right: 10px;
+  height: 21px;
+  padding-right: 20px;
   position: relative;
   top: 34%;
   transform: translateY(-50%);
@@ -847,8 +848,8 @@ p.corporate-sub-heading {
 }
 
 .list-icon {
-  height: 18px;
-  padding-left: 10px;
+  height: 21px;
+  padding-left: 20px;
   position: relative;
   top: 34%;
   transform: translateY(-50%);
