--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1407,7 +1407,7 @@ visibility: visible !important;
 }
 .mobile-wishlist {
   font-size: 32px;
-  top: 2px;
+  // top: 2px;
   color: $cerise;
 }
 // .sidemenu-mobile {
@@ -1446,6 +1446,9 @@ visibility: visible !important;
     &:hover {
       color: $cerise;
     }
+  }
+  &.bottom-menu-item{
+    padding: 4px 0 0 0 !important;
   }
 }
 
