--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -234,53 +234,98 @@
   line-height: 30px;
 }
 
+// @mixin pdp_prod_title {
+//   font-size: 18px;
+//   color: #000;
+//   font-family: $font-Lato;
+//   letter-spacing: 0.5px;
+// }
 @mixin pdp_prod_title {
-  font-size: 18px;
-  color: #000;
-  font-family: $font-Lato;
-  letter-spacing: 0.5px;
+  font-size: 24px;
+  color:$black;
+  font-family: $font-Lora;
+  letter-spacing: 0.48px;
 }
 
+// @mixin pdp_label {
+//   font-family: $font-Lato;
+//   font-size: 9px;
+//   text-transform: uppercase;
+//   color: tint(#000, 70%);
+//   letter-spacing: 2px;
+// }
 @mixin pdp_label {
-  font-family: $font-Lato;
-  font-size: 9px;
-  text-transform: uppercase;
-  color: tint(#000, 70%);
-  letter-spacing: 2px;
-}
-
-@mixin cta_white {
-  font-weight: bold;
+  font-family: $font-Montserrat;
   font-size: 12px;
   text-transform: uppercase;
-  font-family: $font-Lato;
-  letter-spacing: 1px;
+  color: $light-black;
+  letter-spacing: 0.36px;
 }
 
-@mixin pdp_copy_head {
-  font-size: 13px;
-  font-family: $font-Lato;
+// @mixin cta_white {
+//   font-weight: bold;
+//   font-size: 12px;
+//   text-transform: uppercase;
+//   font-family: $font-Lato;
+//   letter-spacing: 1px;
+// }
+@mixin cta_white {
+  font-weight: bold;
+  font-size: 14px;
   text-transform: uppercase;
-  color: #000;
-  letter-spacing: 1px;
+  font-family: $font-Montserrat;
+  letter-spacing: px;
 }
+
+
+// @mixin pdp_copy_head {
+//   font-size: 13px;
+//   font-family: $font-Lato;
+//   text-transform: uppercase;
+//   color: #000;
+//   letter-spacing: 1px;
+// }
+@mixin pdp_copy_head {
+  font-weight: bold;
+  font-size: 14px;
+  font-family: $font-Montserrat;
+  text-transform: uppercase;
+  color: $black;
+  letter-spacing: 0.36px;
+}
+
+
+// @mixin pdp_copy_body {
+//   font-size: 15px;
+//   font-family: $font-Serif;
+//   color: #000;
+//   text-transform: none;
+//   line-height: 20px;
+//   margin-top: 15px;
+// }
 
 @mixin pdp_copy_body {
-  font-size: 15px;
-  font-family: $font-Serif;
-  color: #000;
+  font-size: 12px;
+  font-family: $font-Montserrat;
+  color:$light-black;
   text-transform: none;
   line-height: 20px;
   margin-top: 15px;
+  letter-spacing: 0.36px;
 }
 
+// @mixin pdp_prod_title_mobile {
+//   font-size: 16px;
+//   font-family: $font-Lato;
+//   color: #000;
+//   text-transform: capitalize;
+// }
 @mixin pdp_prod_title_mobile {
-  font-size: 16px;
-  font-family: $font-Lato;
-  color: #000;
+  font-size: 24px;
+  font-family: $font-Lora;
+  color: $black;
   text-transform: capitalize;
 }
-
 @mixin plp_prod_name_desktop {
   font-size: 14px;
   font-family: $font-Lato;
@@ -361,13 +406,29 @@
   }
 }
 
+// @mixin error-msg {
+//   font-size: 10px;
+//   font-style: italic;
+//   color: $cerise;
+//   font-weight: bold;
+//   font-family: $font-Lato;
+//   letter-spacing: 1px;
+//   // text-transform: lowercase;
+//   &::first-letter {
+//     text-transform: uppercase;
+//   }
+//   &.cc-error-msg {
+//     line-height: 15px;
+//     margin-top: 5px;
+//   }
+// }
 @mixin error-msg {
-  font-size: 10px;
+  font-size: 12px;
   font-style: italic;
-  color: $cerise;
+  color: $light-black;
   font-weight: bold;
-  font-family: $font-Lato;
-  letter-spacing: 1px;
+  font-family: $font-Montserrat;
+  letter-spacing: 0.36px;
   // text-transform: lowercase;
   &::first-letter {
     text-transform: uppercase;
