--- a/src/components/CustomerCareInfo/styles.scss
+++ b/src/components/CustomerCareInfo/styles.scss
@@ -1,8 +1,13 @@
+
+@import "../../styles/partials/variables";
+@import "../../styles/partials/mixins";
+
 .customercare {
     h3 {
         font-size: 14px;
-        letter-spacing: 1px;
+        letter-spacing: 0.28px;
         font-weight: bold;
+        font-family: $font-Montserrat;
     }
     p {
         font-size: 13px;
