--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -54,16 +54,44 @@
     font-style: italic;
     font-display: swap;
   }
-  
+  @font-face {
+    font-family: "Lora";
+    src: url("../fonts/Lora-italic.ttf") format("truetype");
+    font-weight: 300;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Lora";
+    src: url("../fonts/Lora-regular.ttf") format("truetype");
+    font-weight: bold;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-italic.ttf") format("truetype");
+    font-weight: 300;
+    font-display: swap;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-regular.ttf") format("truetype");
+    font-weight: bold;
+    font-display: swap;
+    font-style: normal;
+  }
+
 //   @font-face {
 //     font-family: "AmiriFont";
 //     src: url("../../fonts/Amiri\ regular.ttf") format('truetype');
 //     font-weight: normal;
 //   }
   
-//   @font-face {
-//     font-family: "AmiriFont";
-//     src: url("../../fonts/Amiri\ italic.ttf") format('truetype');
-//     font-weight: normal;
-//     font-style: italic;
-//   }
+  // @font-face {
+  //   font-family: "AmiriFont";
+  //   src: url("../../fonts/Amiri\ italic.ttf") format('truetype');
+  //   font-weight: normal;
+  //   font-style: italic;
+  // }
