--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -53,9 +53,7 @@
     background-color: white;
     animation-name :slideLeft;
     animation-duration:0.4s;
-  
-   
-    
+    min-width:200px;
     .remove {
       text-align: center;
     }
