Sizechart Width to fix to Size guide

--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -16,9 +16,13 @@
 }
 
 .accordion-body {
-    display: none;
-
+    visibility: hidden;
+    height: 0px;
     &.open {
-        display: block;
+        visibility: visible;
+        height: auto;
+    }
+    &.closed {
+        margin: 0px;
     }
 }
