--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -23,6 +23,7 @@
         height: auto;
     }
     &.closed {
-        margin: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 }
