--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -32,7 +32,7 @@
     @include plp_prod_name_desktop();
     font-family: $font-Lora;
     font-size: 24px;
-    color:$black;
+    color:$charcoal19;
 
 }
 
@@ -62,7 +62,7 @@
     position: relative;
     font-family: $font-Montserrat;
     font-size: 12px;
-    color:$light-black;
+    color:$charcoal19;
 }
 
 .quantity-wrapper {
