--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -3,7 +3,8 @@
 
 
 .quantity{
-    color: $light-black;
+    color: $charcoal19;
+
     background-color: #f2f2f2;
     padding: 9px 12px;
     cursor: pointer;
@@ -40,7 +41,7 @@
     padding: 9px 10px;
     font-size: 12px;
     font-family: $font-Montserrat;
-    color:$light-black
+    color:$charcoal19;
 }
 .input-cart {
     width: 80px;
