--- a/src/styles/partials/_fonts.scss
+++ b/src/styles/partials/_fonts.scss
@@ -68,17 +68,17 @@
     font-display: swap;
     font-style: normal;
   }
-  @font-face {
-    font-family: "Montserrat";
-    src: url("../fonts/Montserrat-italic.ttf") format("truetype");
-    font-weight: 300;
-    font-display: swap;
-    font-style: normal;
-  }
+  // @font-face {
+  //   font-family: "Montserrat";
+  //   src: url("../fonts/Montserrat-italic.ttf") format("truetype");
+  //   font-weight: 300;
+  //   font-display: swap;
+  //   font-style: normal;
+  // }
   @font-face {
     font-family: "Montserrat";
     src: url("../fonts/Montserrat-regular.ttf") format("truetype");
-    font-weight: bold;
+    font-weight: 300;
     font-display: swap;
     font-style: normal;
   }
