--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -24,8 +24,8 @@ $light-grey: #A6A6A6;
 $very-light-grey: #EFEFEF;
 $gold: #9C7D50;
 $aquablue: #8AB1B0;
-$black:#191919;
-$light-black:#191919cc;
+$charcoal19:#191919;
+// $light-black:#191919cc;
 
 
 // Dropdown menu
