--- a/src/components/MobileSlider/styles.css
+++ b/src/components/MobileSlider/styles.css
@@ -1,8 +1,20 @@
 
 .slick-active .pageritem {
     opacity: 1;
-    background-color: #ab1e56;
+    background-color: #4C4C4C;
     border-radius: 0;
     height: 2px;
     padding: 0px;
+    /* top: 0px; */
+    margin-bottom: 15px;
+}
+
+.slick-dots {
+    position: relative;
+    width: 100%;
+    display: block;
+    bottom: 0;
+    background-color: #D8D8D8;
+    height: 2px;
+    top: 4px;
 }
