--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -371,7 +371,7 @@
   align-items: center;
   border-bottom: 1px solid lightgrey;
   img {
-    width: 80%;
+    width: auto;
   }
   ol {
     width: 80%;
