--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -24,6 +24,14 @@
     padding-left: 80px;
     margin-top: 30px;
 }
+.newcontainer{
+    width: 60%;
+    padding-left: 80px;
+    margin-top: 30px;
+    .image-container {
+        padding: 4px;
+    }
+}
 
 .overlay {
     width: 100%;
