--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -916,6 +916,9 @@ a {
     cursor: pointer;
     @include more-details();
     font-size: 10px;
+    &.gold-color{
+      color: #9C7D50
+    }
   }
   .icon-search-popup {
     cursor: pointer;
@@ -1139,6 +1142,10 @@ span {
     .link-results {
       right: 12%;
       top: 15%;
+      &.mobile-link-results{
+        right: 7%;
+        font-size: 9px;
+      }
     }
   }
 }
