--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -11,20 +11,12 @@
     margin: 0 5px;
 }
 .arrowUp::before{
-    content:url(../../icons/uparrowblack.svg);
-   // margin: 0 10px;
-   position:absolute;
-   height: 20px;
-   width: 20px;
-   right: 20px;
+    content:"\f121";
+    margin: 0 8px;
   }
 .arrowDown::before{
-    content:url(../../icons/downarrowblack.svg);
-   // margin: 0 10px;
-    position:absolute;
-    height: 20px;
-     width: 20px;
-     right: 20px;
+    content:"\f10c";
+    margin: 0 8px;   
 }
 
 .accordion-header {
@@ -34,16 +26,14 @@
 .accordion-body {
     visibility: hidden;
     height: 0px;
+    line-height: 20px;
     &.open {
         visibility: visible;
         height: auto;
+        padding-bottom:15px;
     }
     &.closed {
         margin-top: 0px;
         margin-bottom: 0px;
     }
-}
-// .header-closed-class-name
-// {
-//     border-bottom: lightgrey solid 1px;
-// }
+} 
