--- a/src/components/Share/styles.scss
+++ b/src/components/Share/styles.scss
@@ -12,7 +12,7 @@
     padding: 3px;
 }
 .share-label {
-    margin-top: 30px;
+    //margin-top: 30px;
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: bold;
