--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -2,27 +2,25 @@
 @import "../../styles/partials/mixins";
 
 .size-button {
-    background: color #f9f8f5; ;
+    background-color: $light-bg;
     display: inline-block;
     text-align: center;
     min-width: 40px;
     border-radius: 12px;
-    color: #4C4C4C;
+    color: $cerise;
     font-weight: 400;
     font-size: 12px;
-    font-family: $font-Montserrat;
+    font-family: $font-Lato;
     margin: 0 5px 5px 0;
     padding: 0 5px;
     cursor: pointer;
-    border: 1px solid  #E5E5E5;
+    border: 1px solid transparent;
     line-height: 40px;
     padding: 0 5px;
-    letter-spacing: 0.36px;
     
     &:hover {
-      border: 1px solid #799999;
-      background-color: #F9F8F5;
-      color: #799999;
+      border: 1px solid $cerise;
+      background-color: white;
     }
 
     // &.notavailable-select {
@@ -32,7 +30,7 @@
     // }
 
     &.unavailable {
-      color: #E5E5E5;
+      color: tint(#000, 70%);
       text-decoration: line-through;
 
       &:hover {
@@ -41,9 +39,8 @@
     }
 
     &.selected {
-        border: 1px solid #799999 ;
+        border: 1px solid $cerise;
         background-color: white;
-        color: #799999
-        
+        color: $cerise;
     }
 }
