--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -3,19 +3,18 @@
 
 
 .quantity{
-    color: $charcoal19;
-
+    color: #000;
     background-color: #f2f2f2;
     padding: 9px 12px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 14px;
     position: relative;
 }
 
 .minus-quantity{
     border-top-left-radius: 45%;
     border-bottom-left-radius: 45%;
-    border-right: 1px solid transparent;
+    border-right: 1px solid #fff;
 }
 
 .input {
@@ -39,9 +38,7 @@
 .input-pdp {
     width: 120px;
     padding: 9px 10px;
-    font-size: 12px;
-    font-family: $font-Montserrat;
-    color:$charcoal19;
+    font-size: 14px;
 }
 .input-cart {
     width: 80px;
@@ -52,7 +49,7 @@
 .plus-quantity{
     border-top-right-radius: 45%;
     border-bottom-right-radius: 45%;
-    border-left: 1px solid transparent;
+    border-left: 1px solid #fff;
 }
 
 .error-msg{
@@ -65,11 +62,6 @@
     position: absolute;
     bottom: -15px;
     // left: 5px;
-    color: $cerise;
-    font-family: $font-Lora;
-    font-size: 14px;
-    letter-spacing: 0.28px;
-    font-style: italic;
 }
 
 .left {
