--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -83,7 +83,7 @@ li {
 }
 
 a {
-  color: $gold;
+  color: $cerise;
   cursor: pointer;
   &:hover,
   &:active,
@@ -176,9 +176,6 @@ a {
 }
 .cerise {
   color: $cerise !important;
-}
-.gold{
-  color: $gold !important;
 }
 .bold {
 font-weight: bold;
