--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -2,15 +2,14 @@
 @import "../../styles/partials/mixins";
 
 .primary-button{
-    font-family: $font-Montserrat;
+    font-family: $font-Lato;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     border: none;
     border-radius: 0;
     width: 100%;
     line-height: 52px;
-    letter-spacing: 0.42px;
-    background-color: $aquablue;
+    letter-spacing: 2px;
     &:hover {
         color: #fff;
     }
