--- a/src/components/WishlistButton/styles.scss
+++ b/src/components/WishlistButton/styles.scss
@@ -10,37 +10,22 @@
 @media screen and (min-width:992px) {
     .wishlist-icon {
         font-size: 22px;
-        border: $gold 1.25px;
-        color:$gold;
+        color: gray;
         cursor: pointer;
         margin-top: 5px;
         margin-bottom: 5px;
         &:hover {
-            color: $gold;           
-        }
-    }
-}
-@media screen and (min-width:375px){
-    .wishlist-icon {
-        font-size: 22px;
-        border: $gold 1.25px;
-        color:$gold;
-        cursor: pointer;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        &:hover {
-            color: $gold;           
+            color: $cerise;
         }
     }
 }
 
 .label {
     @include pdp_label();
-    color:$gold;
 }
 
 .added-to-wishlist {
-    color: $gold !important;
+    color: $cerise !important;
 }
 
 .mobile-wishlist {
