--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -234,98 +234,53 @@
   line-height: 30px;
 }
 
-// @mixin pdp_prod_title {
-//   font-size: 18px;
-//   color: #000;
-//   font-family: $font-Lato;
-//   letter-spacing: 0.5px;
-// }
 @mixin pdp_prod_title {
-  font-size: 24px;
-  color:$charcoal19;
-  font-family: $font-Lora;
-  letter-spacing: 0.48px;
+  font-size: 18px;
+  color: #000;
+  font-family: $font-Lato;
+  letter-spacing: 0.5px;
 }
 
-// @mixin pdp_label {
-//   font-family: $font-Lato;
-//   font-size: 9px;
-//   text-transform: uppercase;
-//   color: tint(#000, 70%);
-//   letter-spacing: 2px;
-// }
 @mixin pdp_label {
-  font-family: $font-Montserrat;
-  font-size: 12px;
+  font-family: $font-Lato;
+  font-size: 9px;
   text-transform: uppercase;
-  color: $charcoal19;
-  letter-spacing: 0.36px;
+  color: tint(#000, 70%);
+  letter-spacing: 2px;
 }
 
-// @mixin cta_white {
-//   font-weight: bold;
-//   font-size: 12px;
-//   text-transform: uppercase;
-//   font-family: $font-Lato;
-//   letter-spacing: 1px;
-// }
 @mixin cta_white {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
   text-transform: uppercase;
-  font-family: $font-Montserrat;
-  // letter-spacing: px;
+  font-family: $font-Lato;
+  letter-spacing: 1px;
 }
 
-
-// @mixin pdp_copy_head {
-//   font-size: 13px;
-//   font-family: $font-Lato;
-//   text-transform: uppercase;
-//   color: #000;
-//   letter-spacing: 1px;
-// }
 @mixin pdp_copy_head {
-  font-weight: bold;
-  font-size: 14px;
-  font-family: $font-Montserrat;
+  font-size: 13px;
+  font-family: $font-Lato;
   text-transform: uppercase;
-  color: $charcoal19;
-  letter-spacing: 0.36px;
+  color: #000;
+  letter-spacing: 1px;
 }
-
-
-// @mixin pdp_copy_body {
-//   font-size: 15px;
-//   font-family: $font-Serif;
-//   color: #000;
-//   text-transform: none;
-//   line-height: 20px;
-//   margin-top: 15px;
-// }
 
 @mixin pdp_copy_body {
-  font-size: 12px;
-  font-family: $font-Montserrat;
-  color:$charcoal19;
+  font-size: 15px;
+  font-family: $font-Serif;
+  color: #000;
   text-transform: none;
   line-height: 20px;
   margin-top: 15px;
-  letter-spacing: 0.36px;
 }
 
-// @mixin pdp_prod_title_mobile {
-//   font-size: 16px;
-//   font-family: $font-Lato;
-//   color: #000;
-//   text-transform: capitalize;
-// }
 @mixin pdp_prod_title_mobile {
-  font-size: 24px;
-  font-family: $font-Lora;
-  color:$charcoal19;
+  font-size: 16px;
+  font-family: $font-Lato;
+  color: #000;
   text-transform: capitalize;
 }
+
 @mixin plp_prod_name_desktop {
   font-size: 14px;
   font-family: $font-Lato;
@@ -406,29 +361,13 @@
   }
 }
 
-// @mixin error-msg {
-//   font-size: 10px;
-//   font-style: italic;
-//   color: $cerise;
-//   font-weight: bold;
-//   font-family: $font-Lato;
-//   letter-spacing: 1px;
-//   // text-transform: lowercase;
-//   &::first-letter {
-//     text-transform: uppercase;
-//   }
-//   &.cc-error-msg {
-//     line-height: 15px;
-//     margin-top: 5px;
-//   }
-// }
 @mixin error-msg {
-  font-size: 12px;
+  font-size: 10px;
   font-style: italic;
-  color: $charcoal19;
+  color: $cerise;
   font-weight: bold;
-  font-family: $font-Montserrat;
-  letter-spacing: 0.36px;
+  font-family: $font-Lato;
+  letter-spacing: 1px;
   // text-transform: lowercase;
   &::first-letter {
     text-transform: uppercase;
