Bottom Dock Currency changes

--- a/src/components/dropdown/baseDropdownMenu/styles.scss
+++ b/src/components/dropdown/baseDropdownMenu/styles.scss
@@ -136,7 +136,7 @@
     border-bottom: 4px dashed;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-    color: $cerise;
+    color: #000;
     &.gold-color{
       color: #987E56
     }
