--- a/src/components/dropdown/baseDropdownMenu/styles.scss
+++ b/src/components/dropdown/baseDropdownMenu/styles.scss
@@ -73,7 +73,7 @@
   line-height: 40px;
   cursor: pointer;
   font-size: 10px;
-  font-weight: normal;
+  font-weight: 600;
   padding: 0 10px;
   text-align: center;
   border-bottom: 1px solid #fff;
