changes in pdp redesign

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -2,6 +2,23 @@
 @import "../../styles/partials/mixins";
 
 .primary-button{
+    font-family: $font-Lato;
+    text-align: center;
+    font-size: 12px;
+    border: none;
+    border-radius: 0;
+    width: 100%;
+    line-height: 52px;
+    letter-spacing: 2px;
+    &:hover {
+        color: #fff;
+    }
+    &:active {
+        color: #fff;
+    }
+}
+.pdp-primary-button
+{
     font-family: $font-Montserrat;
     text-align: center;
     font-size: 14px;
