--- a/src/components/dropdown/baseDropdownMenu/styles.scss
+++ b/src/components/dropdown/baseDropdownMenu/styles.scss
@@ -91,6 +91,7 @@
     position: relative;
     width: 100%;
     text-decoration: none;
+    color: #000;
     &:hover {
       color: $cerise !important;
     }
