Styles Changes Revert

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1119,9 +1119,9 @@ input {
 font-size: 20px;
 letter-spacing: 1px;
 color: tint(#000, 50%);
-span {
-  color: #9C7D50;
-}
+  span {
+    color: $cerise;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -1143,7 +1143,7 @@ span {
       right: 12%;
       top: 15%;
       &.mobile-link-results{
-        right: 7%;
+        right: 12%;
         font-size: 9px;
       }
     }
