--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -29,7 +29,11 @@
     letter-spacing: 0.42px;
     background-color: $aquablue;
     &:hover {
-        color: #fff;
+        color: $aquablue;
+        background-color: white;
+        border: #719A9A;
+        border-style: solid;
+        border-width: 2px;
     }
     &:active {
         color: #fff;
