--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -69,7 +69,8 @@
     font-family: $font-Lora;
     font-size: 14px;
     letter-spacing: 0.28px;
-    font-style: italic;
+    font-style: normal;
+    font-weight: normal;
 }
 
 .left {
@@ -82,3 +83,30 @@
 //     // display: flex;
 //     // width: 100%;
 // }
+.quantity-holder
+{
+    display: flex;
+    border: #E5E5E5;
+    border-radius: 25px;
+    border-style: solid;
+    border-width: 1px
+}
+.quantity-pdp
+{
+    color: #191919;
+    padding: 9px 12px;
+    cursor: pointer;
+    font-size: 12px;
+    position: relative;
+    border: #212529
+}
+.input-quantity
+{
+    max-width: 70px;
+    border: 0;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    text-align: center;
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
+}
