--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -107,4 +107,7 @@
     text-align: center;
     border-left: 1px solid #ffffff;
     border-right: 1px solid #ffffff;
+    font-family: $font-Montserrat;
+    font-size: 12px;
+    letter-spacing: 0.36px;
 }
