--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -794,6 +794,9 @@
       font-family: $font-Lato;
     }
   }
+  input[type="text"].panError{
+    border: 1px solid $cerise;
+  }
 }
 
 .same-text {
