--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -22,7 +22,7 @@
     font-family: $font-Montserrat;
     text-align: center;
     font-size: 14px;
-    border: none;
+    border: 2px $aquablue solid;
     border-radius: 0;
     width: 100%;
     line-height: 52px;
