--- a/src/components/CustomerCareInfo/styles.scss
+++ b/src/components/CustomerCareInfo/styles.scss
@@ -14,3 +14,17 @@
     margin-right: 5px;
     vertical-align: text-top;
 }
+.pdpcustomercare {
+    h3 {
+        font-size: 14px;
+        letter-spacing: 1px;
+        font-weight: bold;
+    }
+    p {
+        font-size: 14px;
+    }
+}
+.pdpinfo
+{
+    line-height: 3;
+}
