--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -47,7 +47,8 @@
     }
 
     &.selected {
-        border: 1px solid #799999;
+        border: 1.5px solid #799999;
         background-color: white;
+        font-size:13px;
     }
 }
