PDP page changes

--- a/src/components/ProductCounter/styles.scss
+++ b/src/components/ProductCounter/styles.scss
@@ -63,5 +63,9 @@ z-index: 10;
             letter-spacing: 0px;
             border:none;
         }
+        .pdp-image-counter{
+            font-family: $font-Montserrat;
+            color: #987E56;
+        }
     }
 }
