--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -46,6 +46,7 @@ $pdp-top: $header-height + $secondary-header-height;
     position: relative;
     margin-bottom: 20px;
     z-index: 6;
+    justify-content: center;
 }
 
 .sidebar {
