--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -67,9 +67,11 @@
     }
     &.size {
         line-height: 50px;
+        height: 50px;
     }
     &.quantity {
         line-height: 40px;
+        height: 40px
     }
 }
 
