--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -69,7 +69,7 @@
     font-style: normal;
     font-weight: normal;
     padding: 3px 0px 6px 0px;
-
+    margin-bottom: 10px;
 }
 
 .left {
@@ -88,7 +88,8 @@
     border: #E5E5E5;
     border-radius: 12px;
     border-style: solid;
-    border-width: 1px
+    border-width: 1px;
+    margin-bottom: 20px;
 }
 .quantity-pdp
 {
