--- a/src/components/Cushion/styles.scss
+++ b/src/components/Cushion/styles.scss
@@ -700,10 +700,9 @@ margin-top: 0;
 }
 
 .mobile-wishlist-icon {
-  font-size: 31px !important;
+  font-size: 24px !important;
   cursor: pointer !important;
-  margin-top: 16px !important;
-  margin-bottom: 5px !important;
-  margin-left: 9px !important;
+  margin-top: 18px !important;
+  text-align: center;
 }
 
